Wed Oct  3 16:54:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (collapse): Throws
	IllegalArgumentException if edge is outer.  Caller must call this
	method on symmetric edge instead, but this is not done automatically
	because caller could be confused by collapse() return value.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (canCollapse):
	In order to be consistent with the change just above, returns false
	if edge is outer.

Tue Oct  2 10:53:17 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* build.xml build.properties: Modify ant scripts to move classes
	containing viewer3d calls from jcae-test.jar into jcae.jar.
	Rename skip.tests property into build.tests and change its meaning
	accordingly.
	* src/org/jcae/mesh/amibe/algos2d/Initial.java: Call
	Triangle.setOuter() method to also set 'writable' member.  This
	algorithm had been broken for a month.
	* src/org/jcae/mesh/oemm/MeshReader.java (buildMesh(TIntHashSet)):
	Add node list to MeshTraitsBuilder.
	* build.xml build.properties
	  src/org/jcae/mesh/amibe/ds/HalfEdgeTest.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdgeTest.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdgeTest.java
	  src/org/jcae/mesh/amibe/util/PAVLSortedTreeTest.java: Add junit
	tests.  Classes under **/tests/** are not unit tests but rather
	prototypes which needs user interaction, they will be renamed later.
	* src/org/jcae/mesh/bora/tests/*.java
	  src/org/jcae/mesh/amibe/util/tests/*.java
	  src/org/jcae/mesh/amibe/patch/tests/*.java: These classes implement
	some test cases which require interaction from user.  In order to
	distinguish from junit test cases, they are renamed to not contain
	'Test' in their name.

Mon Oct  1 12:44:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/KdTreeProcedure.java: Define OK,